# living-task-framework

./: .gitignore  .gitmodules  .ltf-influencers.yaml  .markdownlint.jsonc  CFP-Tier1-QuickStart-v1.1.docx  CIP_Resume_2025-11-08_151634.md  CONTRIBUTING.md  Makefile  README.md  SCS-T1_v1.0.md  SCS-T1_v1.1.md  SCS-T1_v1.3.md  SCS-T2_v1.0.md  SCS-T2_v1.2.md  T1_v3.1.1_Section1.md  T1_v3.1.1_Section2.md  T1_v3.1.1_Section3.md  T1_v3.1.1_Section5.md  T1_v3.1.3_FULL.md  bootstrap_ltf.sh  ltf.ps1  ~$P-Tier1-QuickStart-v1.1.docx
.githooks/: pre-commit  pre-push
dev-apps-services/GlossRP/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
dev-apps-services/GlossRP/Arch Docs/: GlossRP_Architecture_v2.2.md  GlossRP_Implementation_Milestones_v2.2.md  GlossRP_Implementation_Milestones_v2.3.md  GlossRP_Internal_Modules_v2.2.md  GlossRP_Invariants_v2.1.md  GlossRP_Logical_Data_Model_ERD.drawio  GlossRP_Logical_Data_Model_v2.2.md  GlossRP_Manifesto_v2.0.md  GlossRP_Tools_Suite_v2.0.md  _Lean Spin Up.md
dev-apps-services/GlossRP/Deprecated/: GlossRP_Architecture_v2.1.md  GlossRP_Implementation_Milestones_v2.1.md  GlossRP_Internal_Modules_v2.1.md  GlossRP_Logical_Data_Model_v2.1.md  GlossRP_Tools_Glossary_Exporter_v1.0.md
dev-apps-services/GlossRP/alembic/: env.py  script.py.mako
dev-apps-services/GlossRP/alembic/versions/: 20241123_000001_initial_schema.py  c822e0aa4ae0_expand_term_version_length.py
dev-apps-services/GlossRP/protos/: glossrp.proto
dev-apps-services/GlossRP/src/glossrp/: __init__.py
dev-apps-services/GlossRP/src/glossrp/config/: __init__.py  settings.py
dev-apps-services/GlossRP/src/glossrp/db/: __init__.py  models.py  session.py
dev-apps-services/GlossRP/src/glossrp/ingestion/: __init__.py  service.py  termspec.py  termspec_strict.py  watcher.py
dev-apps-services/GlossRP/src/glossrp/retrieval/: __init__.py  engine.py
dev-apps-services/GlossRP/termspec-staging/: README.md
dev-apps-services/GlossRP/tests/: conftest.py
dev-apps-services/GlossRP/tests/unit/: test_healthcheck.py  test_ingestion_service.py  test_retrieval_engine.py  test_storage_utils.py  test_termspec_parser.py
(+770 files in other folders)
