[project]
name = "glossrp"
version = "0.1.0"
description = "Glossary Retrieval Protocol microservice (FastAPI + gRPC + pgvector)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
	"fastapi>=0.115.0,<0.116.0",
	"uvicorn[standard]>=0.30.6,<0.31.0",
	"httpx>=0.27.2,<0.28.0",
	"python-dotenv>=1.0.1,<2.0.0",
	"pydantic-settings>=2.5.2,<3.0.0",
	"sqlalchemy>=2.0.34,<2.1.0",
	"pgvector>=0.4.1,<0.5.0",
	"asyncpg>=0.29.0,<0.30.0",
	"psycopg[binary]>=3.2.1,<3.3.0",
	"alembic>=1.13.3,<1.14.0",
	"grpcio>=1.66.1,<1.67.0",
	"grpcio-tools>=1.66.1,<1.67.0",
	"protoletariat>=3.3.0,<3.4.0",
]

[project.optional-dependencies]
dev = [
	"ruff>=0.6.9,<0.7.0",
	"pytest>=8.3.3,<8.4.0",
	"pytest-asyncio>=0.23.8,<0.24.0",
]

[tool.poetry]
name = "glossrp"
version = "0.1.0"
description = "Glossary Retrieval Protocol microservice (FastAPI + gRPC + pgvector)"
authors = ["cashmy <na@na.com>", "EnaC T2 Assistant <assistant@ltf>"]
readme = "README.md"
packages = [{ include = "glossrp", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.34"
pgvector = "^0.4.1"
asyncpg = "^0.29.0"
psycopg = { extras = ["binary"], version = "^3.2.1" }
alembic = "^1.13.3"
ruff = { version = "^0.6.9", optional = true }
pytest = { version = "^8.3.3", optional = true }
pytest-asyncio = { version = "^0.23.8", optional = true }
grpcio = "^1.66.1"
grpcio-tools = "^1.66.1"
protoletariat = "^3.3.0"

[tool.poetry.extras]
dev = ["ruff", "pytest", "pytest-asyncio"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"
pytest-asyncio = "^0.23.8"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --maxfail=1"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
lint.select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
